create own role for mongodb, using mongodb2 because of chef server hickup with role mongodb

--- a/roles/application.json
+++ b/roles/application.json
@@ -8,7 +8,11 @@
   },
   "chef_type": "role",
   "run_list": [
-    "recipe[passenger_apache2]"
+    "recipe[passenger_apache2]",
+    "recipe[xml]",
+    "recipe[git]",
+    "recipe[nodejs]",
+    "recipe[rails-demo]"
   ],
   "env_run_lists": {
   }
